--- a/bandits/Pipfile
+++ b/bandits/Pipfile
@@ -1,9 +1,14 @@
 [[source]]
+url = "https://pypi.python.org/simple"
 verify_ssl = true
-name = "mab"
+name = "pypi"
 
 [packages]
-numpy="*"
-pandas="*"
+matplotlib = "*"
+numpy = "*"
+pandas = "*"
 
 [dev-packages]
+
+[requires]
+python_version = "3.8"
